<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>converter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gel3abt@bosch.com">gel3abt</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <buildtool_depend>mrt_cmake_modules</buildtool_depend>
  <buildtool_export_depend>mrt_cmake_modules</buildtool_export_depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_python</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_matching</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
